Update and rename index to index.html

--- a/webpages/index.html
+++ b/webpages/index.html
@@ -53,11 +53,11 @@
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
     display: block;
-    width:58%;
-    height:95%;
+    width:60%;
+    height:100%;
     position: absolute;
     left: 50%;
-    top: 49%;
+    top: 50%;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     cursor: pointer;
@@ -71,7 +71,7 @@
     transform-style: preserve-3d;
     -webkit-transition: all 400ms;
     transition: all 400ms;
-    z-index: 20;
+    z-index: 0;
 }
 
     .card div {
@@ -117,8 +117,8 @@ label:hover :checked + .card {
     <!-- This is the body for the header-->
     <div class = "column">
         <div class = "row">
-            <img src = "../Placeholders/What is the McC Quilt.PNG" alt = "what is the McC Quilt">
-            <img src =  "../Placeholders/Make your own quilt.PNG" alt = "make your own">
+            <img src = "../Website images/about_mcc_quilt.png" alt = "About the actual McC Quilt">
+            <img src =  "../Website images/submit.png" alt = "Submit your own quilt square">
         </div>
     
         <div class = "centerrow">
@@ -126,7 +126,7 @@ label:hover :checked + .card {
     <input type="checkbox"  />
     <div class="card">
         <div class="front">
-            <img src= "../Placeholders/McCormick_mural_design.png" alt = "big centerpiece">
+            <img src= "../Website images/McCormick Centerpiece.png" alt = "big centerpiece">
 
         </div>
         <div class="back">
@@ -139,8 +139,8 @@ label:hover :checked + .card {
         </div>
         
         <div class = "row">
-            <img src = "../Placeholders/Take a Virtural McC tour.PNG?.png" alt = "Take a virtual McC tour">
-            <img src = "../Placeholders/More info.png" alt = "more info?">
+            <img src = "../Website images/quilt_shop.png" alt = "Quilt shop">
+            <img src = "../Website images/links_to_other_resources.png" alt = "links to more resources">
         </div>
 
     </div>
