changing file paths

--- a/Index.html
+++ b/Index.html
@@ -145,7 +145,7 @@ label:hover :checked + .card {
         </div>
         
         <div class = "row">
-            <a href = "quilt shop.html">
+            <a href = "./webpages/quilt shop.html">
             <img src = "./webpage-images/quilt_shop.png" alt = "Quilt shop">
                 </a>
             <img src = "./webpage-images/links_to_other_resources.png" alt = "links to more resources">
