--- a/webpages/quilt shop.html
+++ b/webpages/quilt shop.html
@@ -54,17 +54,17 @@
        
         <div class = "mrow">
             <div class = "firstrow">
-            <img src = "../Website images/Quilt-shop-header.png" alt = "quilt shop header">
+            <img src = "../webpage-images/Quilt-shop-header.png" alt = "quilt shop header">
             </div>
         </div>
         <div class = "mrow">
             <div class = "quilt">
-                <a href= "../Website images/Template.png" download>
-                    <img src = "../Website images/Template.png" alt = "template">
+                <a href= "../webpage-images/Template.png" download>
+                    <img src = "../webpage-images/Template.png" alt = "template">
                 </a> 
             </div>
             <div class = "explanation"> 
-                <img src = "../Website images/exp-quilt-template.png" alt = "explanation">
+                <img src = "../webpage-images/exp-quilt-template.png" alt = "explanation">
             </div>
         </div>
     </div>
