--- a/quilt shop.html
+++ b/quilt shop.html
@@ -67,7 +67,7 @@
         
         
         <div class = "homebutton">
-            <a href = "Index.html">
+            <a href = "index.html">
                 <img src = "webpage-images/home-button.png" alt = "home button" width = "65">
             </a>
 
